; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_pmcraid.c_pmcraid_get_error_info.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_pmcraid.c_pmcraid_get_error_info.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pmcraid_ioasc_error = type { i64 }

@pmcraid_ioasc_error_table = common dso_local global %struct.pmcraid_ioasc_error* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.pmcraid_ioasc_error* (i64)* @pmcraid_get_error_info to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.pmcraid_ioasc_error* @pmcraid_get_error_info(i64 %0) #0 {
  %2 = alloca %struct.pmcraid_ioasc_error*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  store i64 %0, i64* %3, align 8
  store i32 0, i32* %4, align 4
  br label %5

5:                                                ; preds = %25, %1
  %6 = load i32, i32* %4, align 4
  %7 = load %struct.pmcraid_ioasc_error*, %struct.pmcraid_ioasc_error** @pmcraid_ioasc_error_table, align 8
  %8 = call i32 @ARRAY_SIZE(%struct.pmcraid_ioasc_error* %7)
  %9 = icmp slt i32 %6, %8
  br i1 %9, label %10, label %28

10:                                               ; preds = %5
  %11 = load %struct.pmcraid_ioasc_error*, %struct.pmcraid_ioasc_error** @pmcraid_ioasc_error_table, align 8
  %12 = load i32, i32* %4, align 4
  %13 = sext i32 %12 to i64
  %14 = getelementptr inbounds %struct.pmcraid_ioasc_error, %struct.pmcraid_ioasc_error* %11, i64 %13
  %15 = getelementptr inbounds %struct.pmcraid_ioasc_error, %struct.pmcraid_ioasc_error* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = load i64, i64* %3, align 8
  %18 = icmp eq i64 %16, %17
  br i1 %18, label %19, label %24

19:                                               ; preds = %10
  %20 = load %struct.pmcraid_ioasc_error*, %struct.pmcraid_ioasc_error** @pmcraid_ioasc_error_table, align 8
  %21 = load i32, i32* %4, align 4
  %22 = sext i32 %21 to i64
  %23 = getelementptr inbounds %struct.pmcraid_ioasc_error, %struct.pmcraid_ioasc_error* %20, i64 %22
  store %struct.pmcraid_ioasc_error* %23, %struct.pmcraid_ioasc_error** %2, align 8
  br label %29

24:                                               ; preds = %10
  br label %25

25:                                               ; preds = %24
  %26 = load i32, i32* %4, align 4
  %27 = add nsw i32 %26, 1
  store i32 %27, i32* %4, align 4
  br label %5

28:                                               ; preds = %5
  store %struct.pmcraid_ioasc_error* null, %struct.pmcraid_ioasc_error** %2, align 8
  br label %29

29:                                               ; preds = %28, %19
  %30 = load %struct.pmcraid_ioasc_error*, %struct.pmcraid_ioasc_error** %2, align 8
  ret %struct.pmcraid_ioasc_error* %30
}

declare dso_local i32 @ARRAY_SIZE(%struct.pmcraid_ioasc_error*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
